--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,9 +1,6 @@
 body {
   margin: 0;
-  
-  font-family: -apple-system, BlinkMacSystemFont, 'Times New Roman', Times, serif,
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+   font-family: 'Roboto',sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #F6F6F2;
